--- a/index.html
+++ b/index.html
@@ -261,6 +261,10 @@ To https://github.com/guipedreira/tutorial-tecwebii.git
 						<li>Sempre faça um <pre><code>git commit</code></pre>e em seguida um<pre><code>git push</code></pre>assim, você mantem as versões corretas em ambos os lugares.</li>
 					</ul>
 				</section>
+				<section>
+					<h3>Colabore com GitHub</h3>
+					<p>Esta apresentação está no GitHub, caso queira modificá-la ou copiá-la, basta acessar: <a href="https://github.com/guipedreira/tutorial-tecwebii">https://github.com/guipedreira/tutorial-tecwebii</a></p>
+				</section>
 			</div>
 		</div>
 
